--- a/src/components/GameScreen/GameScreen.scss
+++ b/src/components/GameScreen/GameScreen.scss
@@ -19,6 +19,12 @@
         border: 1px solid black;
         border-radius: 8px;
         margin-bottom: 2rem;
+
+        @media (max-width: 767px) {
+            width: 90%;
+            margin: 0 1rem 2rem;
+            padding: 1rem;
+        }
     }
 
     .word {
@@ -29,6 +35,10 @@
         justify-content: center;
         align-items: center;
         margin: 2rem;
+        @media (max-width: 767px) {
+            margin: 1rem;
+        }
+
         &:hover {
             color: gray;
         }
